exams.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: exams
  name: exams
spec:
  replicas: 1
  selector:
    matchLabels:
      app: exams
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: exams
    spec:
      containers:
      - image: aakashgaur57/exams
        name: homecontainer
        ports:
        - containerPort: 80
        resources: {}
status: {}
