login.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: login
  name: login
spec:
  replicas: 1
  selector:
    matchLabels:
      app: login
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: login
    spec:
      containers:
      - image: loveyogi2000/micro-login
        name: logincontainer
        ports:
        - containerPort: 80
        resources: {}
status: {}
