nodeapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: node
  name: node
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: node
    spec:
      containers:
      - image: aakashgaur57/nodeapp
        name: nodecontainer
        ports:
        - containerPort: 80
        resources: {}
status: {}
