aboutus.svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: aboutus
  name: aboutuslb
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: aboutus
  type: NodePort
status:
  loadBalancer: {}
