contact.svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: contact
  name: contactlb
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: contact
  type: NodePort
status:
  loadBalancer: {}
