courses.svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: courses
  name: courseslb
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: courses
  type: NodePort
status:
  loadBalancer: {}
