home.svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: home
  name: homelb
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: home
  type: NodePort
status:
  loadBalancer: {}
