login.svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: login
  name: loginlb
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: login
  type: NodePort
status:
  loadBalancer: {}
