mongo.svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: mongo
  name: mongolb
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 27017
  selector:
    app: mongo
  type: ClusterIP
status:
  loadBalancer: {}
