nodeapp.svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: nodeapp
  name: nodeapplb
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nodeapp
  type: NodePort
status:
  loadBalancer: {}
