delvex-auth.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: msvc-auth-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-issuer 
spec:
  ingressClassName: nginx
  rules:
  - host: msvc.delvex.io
    http:
      paths:
      - path: /auth/login
        pathType: Prefix
        backend:
          service:
            name: auth
            port:
              number: 80
      - path: /auth/register
        pathType: Prefix
        backend:
          service:
            name: auth
            port:
              number: 80 
  tls:
  - hosts:
    - msvc.delvex.io
    secretName: msvc-secret
